main.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
    scroll-behavior: smooth;
  }
  
  svg {
    height: 2em;
    width: auto;
    margin-bottom: 1em;
  }
  article {
    text-align: justify;
    margin-top: 8em;
    display: flex;
    flex-direction: column;
    align-items: between;
    justify-content: center;
    margin-bottom: 2em;
  }
  
  section {
    padding: 2em 4em;
  }
  
  #header {
    margin: 0;
    color: white;
    background: black;
    padding-top: 1em;
    z-index: 1;
    display: grid;
    grid-template-rows: min-content min-content;
    height: min-content;
    position: fixed;
    top: 0;
    width: 100%;  
  }
  
  #name-logo {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-end;
    flex-wrap: wrap;
  }
  
  h1 {
    margin: 0 0.5em 0 0;
    font-family: 'Indie Flower', cursive;
    letter-spacing: 2px;
    font-size: 40px;
  }
  
  nav {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: flex-end; 
  }

  nav a{
    color: white;
    text-decoration: none;
    font-weight: bold;
  }
  
  nav a:hover {
    color: red;
  }
  
  ul{
    list-style-type: none;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: baseline;
    padding: 0 3px;
  }
  
  li {
    margin: 0 20px;
    
  }
    
  #hummingbird{
    display: block;
    width: 75vw;
    max-width: 100%;
    height: auto;
    margin: 0 auto;
    
  }
  .video-container {
   
    overflow: hidden;
    max-width: 100%;
    width: 75vw;
    margin: 0 auto;
    display: block;
    height: auto;
  }
  
  #movie-player {
    height: 100%;
  }
  
  
  #video {
    width: 100%;
  }
  
  h3 {
    display: block;
  }
  
  
  .product-flex-container {
    display: flex;
    flex-direction: row;
    -webkit-flex-direction: row;
    -moz-flex-direction: row;
    justify-content: space-around;
    -webkit-justify-content: space-around;
    -moz-justify-content: space-around;
    flex-wrap: wrap;
    
  }
  
  .product {
    transition: opacity 0.75s;
  }
  
  .product:hover {
    opacity: 0.35;
    cursor: pointer;
  }
  
  figure img{
    width: 200px;
    height: auto;
    border: 2px solid black;
    border-radius: 10px;
  }
  figcaption{
    text-align: center;
  }
  
  textarea {
    display: block;
    margin: 10px 0 15px 0;
    max-width: 100%;
  }
  
  #email-label, #email {
    display: block;
  }
  
  #submit {
    
    display: block;
    font-size: 1.5em;
    font-family: "Trebuchet MS", sans-serif;
    margin-top: 5px;
    background-color: #1F84EF;
    border: solid 3px darkGray;
    border-radius: 10px;
    color: white;
    height: 2em;
    width: min-content;
    border-width: 3px;
    transition: color 0.75s, background-color 0.75s, border 0.75s;
    
  }

  #submit:hover {
    cursor: pointer;
    color: #FFD200;
    background-color: #1640d9;
    border: solid 3px black;
  }
  
  
  @media only screen and (max-width: 600px){
    
    
    #header {
      position: static;
      z-index: 0;
    }
    
    #name-logo {
      padding: 0 7px;
    }
    
    h1 {
      font-size: 30px;
    }
    
    svg {
      height: 1.5em;
    }
    
    nav {
      justify-content: center;
    }
    
    li {
      margin: 0px 10px;
    }
    
    article {
      margin-top: 0;
      text-align: left;
    }
    
    section {
      padding: 1em;
    }
    
    #hummingbird{
    width: 95vw;
    } 
   
    .video-container {
      width: 95vw;
    }
    
    
    
  }
  
  @media only screen and (max-width: 345px) {
    
    h1 {
      text-align: center;
    }
    
    nav {
      flex-direction: column;
      overflow-x: scroll;
      align-items: center;
    }
    
  }

